language/move-lang/tests/move_check/expansion/restricted_function_names.exp
error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:2:9
  │
2 │     fun address() { abort 0 }
  │         ^^^^^^^ Invalid function name 'address'. 'address' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:3:9
  │
3 │     fun signer() { abort 0 }
  │         ^^^^^^ Invalid function name 'signer'. 'signer' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:4:9
  │
4 │     fun u8() { abort 0 }
  │         ^^ Invalid function name 'u8'. 'u8' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:5:9
  │
5 │     fun u64() { abort 0 }
  │         ^^^ Invalid function name 'u64'. 'u64' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:6:9
  │
6 │     fun u128() { abort 0 }
  │         ^^^^ Invalid function name 'u128'. 'u128' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:7:9
  │
7 │     fun vector<T>() { abort 0 }
  │         ^^^^^^ Invalid function name 'vector'. 'vector' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:8:9
  │
8 │     fun move_to() { abort 0 }
  │         ^^^^^^^ Invalid function name 'move_to'. 'move_to' is restricted and cannot be used to name a function

error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_function_names.move:9:9
  │
9 │     fun move_from() { abort 0 }
  │         ^^^^^^^^^ Invalid function name 'move_from'. 'move_from' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:10:9
   │
10 │     fun borrow_global() { abort 0 }
   │         ^^^^^^^^^^^^^ Invalid function name 'borrow_global'. 'borrow_global' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:11:9
   │
11 │     fun borrow_global_mut() { abort 0 }
   │         ^^^^^^^^^^^^^^^^^ Invalid function name 'borrow_global_mut'. 'borrow_global_mut' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:12:9
   │
12 │     fun exists() { abort 0 }
   │         ^^^^^^ Invalid function name 'exists'. 'exists' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:13:9
   │
13 │     fun freeze() { abort 0 }
   │         ^^^^^^ Invalid function name 'freeze'. 'freeze' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:14:9
   │
14 │     fun assert() { abort 0 }
   │         ^^^^^^ Invalid function name 'assert'. 'assert' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:15:9
   │
15 │     fun Self() { abort 0}
   │         ^^^^ Invalid function name 'Self'. 'Self' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:18:14
   │
18 │ script { fun address() { abort 0 } }
   │              ^^^^^^^ Invalid function name 'address'. 'address' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:19:14
   │
19 │ script { fun signer() { abort 0 } }
   │              ^^^^^^ Invalid function name 'signer'. 'signer' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:20:14
   │
20 │ script { fun u8() { abort 0 } }
   │              ^^ Invalid function name 'u8'. 'u8' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:21:14
   │
21 │ script { fun u64() { abort 0 } }
   │              ^^^ Invalid function name 'u64'. 'u64' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:22:14
   │
22 │ script { fun u128() { abort 0 } }
   │              ^^^^ Invalid function name 'u128'. 'u128' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:23:14
   │
23 │ script { fun vector<T>() { abort 0 } }
   │              ^^^^^^ Invalid function name 'vector'. 'vector' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:24:14
   │
24 │ script { fun move_to() { abort 0 } }
   │              ^^^^^^^ Invalid function name 'move_to'. 'move_to' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:25:14
   │
25 │ script { fun move_from() { abort 0 } }
   │              ^^^^^^^^^ Invalid function name 'move_from'. 'move_from' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:26:14
   │
26 │ script { fun borrow_global() { abort 0 } }
   │              ^^^^^^^^^^^^^ Invalid function name 'borrow_global'. 'borrow_global' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:27:14
   │
27 │ script { fun borrow_global_mut() { abort 0 } }
   │              ^^^^^^^^^^^^^^^^^ Invalid function name 'borrow_global_mut'. 'borrow_global_mut' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:28:14
   │
28 │ script { fun exists() { abort 0 } }
   │              ^^^^^^ Invalid function name 'exists'. 'exists' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:29:14
   │
29 │ script { fun freeze() { abort 0 } }
   │              ^^^^^^ Invalid function name 'freeze'. 'freeze' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:30:14
   │
30 │ script { fun assert() { abort 0 } }
   │              ^^^^^^ Invalid function name 'assert'. 'assert' is restricted and cannot be used to name a function

error[E02009]: invalid name
   ┌─ tests/move_check/expansion/restricted_function_names.move:31:14
   │
31 │ script { fun Self() { abort 0} }
   │              ^^^^ Invalid function name 'Self'. 'Self' is restricted and cannot be used to name a function

