language/move-lang/tests/move_check/expansion/restricted_function_names.move
module 0x8675309::M {
    fun address() { abort 0 }
    fun signer() { abort 0 }
    fun u8() { abort 0 }
    fun u64() { abort 0 }
    fun u128() { abort 0 }
    fun vector<T>() { abort 0 }
    fun move_to() { abort 0 }
    fun move_from() { abort 0 }
    fun borrow_global() { abort 0 }
    fun borrow_global_mut() { abort 0 }
    fun exists() { abort 0 }
    fun freeze() { abort 0 }
    fun assert() { abort 0 }
    fun Self() { abort 0}
}

script { fun address() { abort 0 } }
script { fun signer() { abort 0 } }
script { fun u8() { abort 0 } }
script { fun u64() { abort 0 } }
script { fun u128() { abort 0 } }
script { fun vector<T>() { abort 0 } }
script { fun move_to() { abort 0 } }
script { fun move_from() { abort 0 } }
script { fun borrow_global() { abort 0 } }
script { fun borrow_global_mut() { abort 0 } }
script { fun exists() { abort 0 } }
script { fun freeze() { abort 0 } }
script { fun assert() { abort 0 } }
script { fun Self() { abort 0} }
